--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Enclave Phaser Template</title>
+	<title>🐵 CMG Phaser Template</title>
 	<meta name="author" content="Enclave Games" />
 	<meta name="description" content="Mobile template for HTML5 games created using the Phaser game engine." />
 	<meta name="monetization" content="$ilp.uphold.com/k4eJGQUDF9nw" />
@@ -27,7 +27,6 @@
 </head>
 <body>
 <img id="banner" src="screens/EPT-MainMenu.png" alt="Enclave Phaser Template" />
-<a href="https://github.com/EnclaveGames/Enclave-Phaser-Template/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="img/fork.png" alt="Fork me on GitHub" /></a>
 <script src="src/start.js"></script>
 </body>
 </html>
